objects/ssot__RegulatoryCode__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Description</masterLabel>
            <refAttrDeveloperName>Description</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDateTime__c</fullName>
        <label>Effective From Date Time</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Effective From Date Time</masterLabel>
            <refAttrDeveloperName>EffectiveFromDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDateTime__c</fullName>
        <label>Effective To Date Time</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Effective To Date Time</masterLabel>
            <refAttrDeveloperName>EffectiveToDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalUrl__c</fullName>
        <label>External Url</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>External Url</masterLabel>
            <refAttrDeveloperName>ExternalUrl</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Code Id</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Regulatory Code Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Is Active</masterLabel>
            <refAttrDeveloperName>IsActive</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRegulatoryCodeId__c</fullName>
        <label>Parent Regulatory Code</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Parent Regulatory Code</masterLabel>
            <refAttrDeveloperName>ParentRegulatoryCodeId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryAuthorityId__c</fullName>
        <label>Regulatory Authority</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Regulatory Authority</masterLabel>
            <refAttrDeveloperName>RegulatoryAuthorityId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeType__c</fullName>
        <label>Regulatory Code Type</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Regulatory Code Type</masterLabel>
            <refAttrDeveloperName>RegulatoryCodeType</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Subject</masterLabel>
            <refAttrDeveloperName>Subject</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545870329_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCode_ParentRegulatoryCodeI_rel</label>
        <referenceTo>ssot__RegulatoryCode__dlm</referenceTo>
        <relationshipLabel>RegulatoryCode_ParentRegulatoryCodeI_rel</relationshipLabel>
        <relationshipName>rel_1718545870329_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819539655_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCode_RegulatoryAuthorityId_rel</label>
        <referenceTo>ssot__RegulatoryAuthority__dlm</referenceTo>
        <relationshipLabel>RegulatoryCode_RegulatoryAuthorityId_rel</relationshipLabel>
        <relationshipName>rel_1719819539655_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Regulatory Code</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Case</referenceEntityGroup>
        <referenceEntityName>RegulatoryCode</referenceEntityName>
        <referenceEntitySubjectArea>Case</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>